--- a/cs499mobileapp/app/src/main/res/menu/menu_main.xml
+++ b/cs499mobileapp/app/src/main/res/menu/menu_main.xml
@@ -25,4 +25,10 @@
         android:orderInCategory="100"
         android:title="@string/action_export_list"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_export_database"
+        android:orderInCategory="100"
+        android:title="@string/action_export_database"
+        app:showAsAction="never" />
 </menu>
