--- a/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
@@ -21,12 +21,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:padding="4dp">
+            >
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/record_floatingButton"
-                android:src="@drawable/record_icon"
-                android:layout_width="match_parent"
+                android:src="@drawable/record_word_icon"
+                android:background="@color/gray"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_centerHorizontal="true"
@@ -130,18 +131,6 @@
             android:orientation="horizontal"
             android:layout_weight="50">
 
-            <android.support.v7.widget.AppCompatImageButton
-                android:id="@+id/controller_record_button"
-                android:src="@drawable/record_button_red"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="15"
-                android:scaleType="fitCenter"/>
-
-            <android.support.v7.widget.LinearLayoutCompat
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="30">
 
                 <android.support.v7.widget.AppCompatImageButton
                     android:id="@+id/controller_skipprev_button"
@@ -163,7 +152,6 @@
                     android:layout_height="match_parent"
                     android:layout_weight="30"/>
 
-            </android.support.v7.widget.LinearLayoutCompat>
 
 
         </android.support.v7.widget.LinearLayoutCompat>
