--- a/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
@@ -25,8 +25,7 @@
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/controller_record_floatingButton"
-                android:src="@drawable/record_word_icon"
-                android:background="@color/gray"
+                android:src="@drawable/record_off_word_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -116,6 +115,8 @@
 
             <ImageButton
                 android:src="@drawable/shuffle_icon"
+                style="?android:borderlessButtonStyle"
+
                 android:id="@+id/controller_shuffle_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -138,12 +139,16 @@
 
                 <android.support.v7.widget.AppCompatImageButton
                     android:id="@+id/controller_skipprev_button"
+                    style="?android:borderlessButtonStyle"
+
                     android:src="@drawable/skip_prev_icon"
                     android:scaleType="fitCenter"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="30"/>
                 <android.support.v7.widget.AppCompatImageButton
+                    style="?android:borderlessButtonStyle"
+
                     android:id="@+id/controller_playpause_button"
                     android:src="@drawable/play_arrow"
                     android:layout_width="0dp"
@@ -151,6 +156,7 @@
                     android:layout_weight="50" />
                 <android.support.v7.widget.AppCompatImageButton
                     android:id="@+id/controller_skipnext_button"
+                    style="?android:borderlessButtonStyle"
                     android:src="@drawable/skip_next"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
