working on playprogress countdown

--- a/cs499mobileapp/app/src/main/res/menu/menu_navigation_drawer.xml
+++ b/cs499mobileapp/app/src/main/res/menu/menu_navigation_drawer.xml
@@ -16,8 +16,8 @@
             android:id="@+id/nav_manage"
             android:title="Tools" />
 
-        <item android:id="@+id/nav_number"
-            android:title="SettingToggle"
+        <item android:id="@+id/playback_timer_toggle"
+            android:title="Use Playback Timer"
             app:actionLayout="@layout/setting_toggle_item"/>
 
     </group>
