--- a/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="70"
-        android:background="@color/gray">
+        android:padding="15dp"
+        >
 
 
         <android.support.v7.widget.LinearLayoutCompat
@@ -44,7 +45,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             CircularSeekBar:circle_stroke_width="6dp"
-            CircularSeekBar:circle_color="@color/LightGray"
+            CircularSeekBar:circle_color="@android:color/transparent"
             CircularSeekBar:circle_progress_color="@color/OrangeRed"
             CircularSeekBar:progress="25"
             CircularSeekBar:max="100"
@@ -71,7 +72,11 @@
             style="?android:progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="20"/>
+            android:layout_weight="20"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:progressBackgroundTint="@color/LightGray"
+            android:progressTint="@color/DeepSkyBlue"/>
 
         <!--<LinearLayout-->
             <!--android:layout_width="0dp"-->
@@ -140,15 +145,12 @@
                 <android.support.v7.widget.AppCompatImageButton
                     android:id="@+id/controller_skipprev_button"
                     style="?android:borderlessButtonStyle"
-
                     android:src="@drawable/skip_prev_icon"
-                    android:scaleType="fitCenter"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="30"/>
                 <android.support.v7.widget.AppCompatImageButton
                     style="?android:borderlessButtonStyle"
-
                     android:id="@+id/controller_playpause_button"
                     android:src="@drawable/play_arrow"
                     android:layout_width="0dp"
