--- a/cs499mobileapp/app/src/main/res/layout/setting_toggle_item.xml
+++ b/cs499mobileapp/app/src/main/res/layout/setting_toggle_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <Switch
+        android:id="@+id/play_progress_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/SettingSwitchStyle"
