--- a/cs499mobileapp/app/src/main/res/menu/menu_navigation_drawer.xml
+++ b/cs499mobileapp/app/src/main/res/menu/menu_navigation_drawer.xml
@@ -2,23 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:title="Tools" />
+    <group >
+        <item android:id="@+id/wifi_only_toggle_item"
+            android:title="Use WIFI Only"
+            app:actionLayout="@layout/wifi_only_toggle_item_layout"/>
 
         <item android:id="@+id/playback_timer_toggle_item"
             android:title="Use Playback Timer"
-            app:actionLayout="@layout/setting_toggle_item"/>
+            app:actionLayout="@layout/play_progress_toggle_item_layout"/>
 
     </group>
 
