--- a/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
+++ b/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
@@ -42,14 +42,14 @@
             android:focusable="true"
             android:focusableInTouchMode="true"/>
 
-        <ImageButton
-            android:id="@+id/station_list_play_button"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/play_arrow"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            />
+        <!--<ImageButton-->
+            <!--android:id="@+id/station_list_play_button"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:src="@drawable/play_arrow"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="10"-->
+            <!--/>-->
     </LinearLayout>
 
 </LinearLayout>
