navigation view for recording file size done.

--- a/cs499mobileapp/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/cs499mobileapp/app/src/main/res/layout/navigation_drawer_header.xml
@@ -22,8 +22,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Settings"
+        android:text="Setting"
         android:textSize="30dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
 
