--- a/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
+++ b/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
@@ -9,7 +9,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:descendantFocusability="blocksDescendants">
+    android:descendantFocusability="blocksDescendants"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <!--<ImageView-->
             <!--android:id="@+id/playlist_listview_image"-->
             <!--android:adjustViewBounds="true"-->
@@ -40,7 +42,8 @@
             android:scrollHorizontally="true"
             android:marqueeRepeatLimit ="marquee_forever"
             android:focusable="true"
-            android:focusableInTouchMode="true"/>
+            android:focusableInTouchMode="true"
+            android:layout_marginLeft="10dp"/>
 
         <!--<ImageButton-->
             <!--android:id="@+id/station_list_play_button"-->
