--- a/SeaWave Streamer/app/src/main/res/layout/player_fragment.xml
+++ b/SeaWave Streamer/app/src/main/res/layout/player_fragment.xml
@@ -16,13 +16,36 @@
         android:layout_weight="70"
         android:padding="15dp">
 
-
         <android.support.v7.widget.LinearLayoutCompat
             android:id="@+id/imageview_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:layout_marginLeft="27dp"
+            android:layout_marginRight="27dp"
             >
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/controller_station_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No Station Selected"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"/>
+
+            <android.support.v7.widget.AppCompatTextView
+
+                android:id="@+id/controller_playlist_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No Playlist Selected"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+
+
 
         </android.support.v7.widget.LinearLayoutCompat>
 
@@ -34,8 +57,9 @@
             android:layout_centerVertical="true"
             CircularSeekBar:circle_stroke_width="6dp"
             CircularSeekBar:circle_color="@android:color/transparent"
-            CircularSeekBar:circle_progress_color="@color/OrangeRed"
+            CircularSeekBar:circle_progress_color="@color/DeepSkyBlue"
             CircularSeekBar:max="100"
+
             CircularSeekBar:pointer_alpha_ontouch="100"
             CircularSeekBar:pointer_color="#0174DF"
             CircularSeekBar:pointer_halo_color="@color/CornflowerBlue"
@@ -54,16 +78,16 @@
         android:layout_weight="30"
         android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/controller_progress_bar"
-            style="?android:progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="20"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:progressBackgroundTint="@color/LightGray"
-            android:progressTint="@color/DeepSkyBlue"/>
+        <!--<ProgressBar-->
+            <!--android:id="@+id/controller_progress_bar"-->
+            <!--style="?android:progressBarStyleHorizontal"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="20"-->
+            <!--android:paddingLeft="10dp"-->
+            <!--android:paddingRight="10dp"-->
+            <!--android:progressBackgroundTint="@color/LightGray"-->
+            <!--android:progressTint="@color/DeepSkyBlue"/>-->
 
         <!--<LinearLayout-->
             <!--android:layout_width="0dp"-->
@@ -91,23 +115,23 @@
                 android:layout_height="match_parent"
                 android:layout_weight="70"
                 android:orientation="vertical">
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/controller_station_name"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="50"
-                android:text="No Station Selected"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:gravity="center_horizontal|fill_vertical"/>
+            <!--<android.support.v7.widget.AppCompatTextView-->
+                <!--android:id="@+id/controller_station_name"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_weight="50"-->
+                <!--android:text="No Station Selected"-->
+                <!--android:textStyle="bold"-->
+                <!--android:textSize="20sp"-->
+                <!--android:gravity="center_horizontal|fill_vertical"/>-->
 
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/controller_playlist_name"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="50"
-                android:text="No Playlist Selected"
-                android:gravity="center_vertical|center_horizontal"/>
+            <!--<android.support.v7.widget.AppCompatTextView-->
+                <!--android:id="@+id/controller_playlist_name"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_weight="50"-->
+                <!--android:text="No Playlist Selected"-->
+                <!--android:gravity="center_vertical|center_horizontal"/>-->
             </LinearLayout>
 
             <ImageButton
