--- a/SeaWave Streamer/app/src/main/res/layout/player_fragment.xml
+++ b/SeaWave Streamer/app/src/main/res/layout/player_fragment.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="No Station Selected"
                 android:textStyle="bold"
+                android:typeface="serif"
                 android:textSize="25sp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"/>
